// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> should render 1`] = `
<div
  className="container-noside"
>
  <ViewHeader
    title="Administration"
  >
    <strong>
      Administration
    </strong>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabLink
      to="/administration/settings"
    >
      Settings
    </TabLink>
    <TabLink
      to="/administration/users"
    >
      Users
    </TabLink>
    <TabLink
      to="/administration/updates"
    >
      Updates
    </TabLink>
  </Tabs>
  <Switch>
    <Redirect
      exact={true}
      from="/administration"
      push={false}
      to="/administration/settings"
    />
    <Route
      component={[Function]}
      path="/administration/settings"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/administration/users"
    />
    <Route
      component={[Function]}
      path="/administration/updates"
    />
    <Route
      component={[Function]}
      path="/administration/users/:userId"
    />
  </Switch>
</div>
`;

exports[`<Settings /> should render placeholder when loading 1`] = `
<div
  className="container-noside"
>
  <ViewHeader
    title="Administration"
  >
    <strong>
      Administration
    </strong>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabLink
      to="/administration/settings"
    >
      Settings
    </TabLink>
    <TabLink
      to="/administration/users"
    >
      Users
    </TabLink>
    <TabLink
      to="/administration/updates"
    >
      Updates
    </TabLink>
  </Tabs>
  <LoadingPlaceholder />
</div>
`;
